# ImGui_Ned_Embed

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-win.bat  build.sh  main.cpp
.cache/clangd/index/: adler32.c.B91B8A9B382BC1F1.idx  agent_request.cpp.5931EF9734AB50DA.idx  agent_request.h.9EF411622E271C5C.idx  ai_agent.cpp.CBFD66748B51D1FA.idx  ai_agent.h.D355B4151512CACC.idx  ai_agent_history.cpp.F539512DA4D705CF.idx  ai_agent_history.h.4581F855D54EE9CC.idx  ai_agent_text_input.cpp.3AA499179B375F83.idx  ai_agent_text_input.h.86C0FE56EEE40297.idx  ai_message.h.54F8E9F001193C6C.idx  ai_open_router.cpp.A07C532E0F090A49.idx  ai_open_router.h.FC613C1C99D12651.idx  ai_tab.cpp.B49B936FC4DE1A31.idx  ai_tab.h.C06BF2DA036C73D3.idx  alloc.c.0CD400AD333F53B0.idx  alloc.c.836031C954D34E76.idx  alloc.h.0AC084C48E216644.idx  alloc.h.214426FF8AD432AF.idx  alloc.h.401AEA7B982C6E2B.idx  alloc.h.471265ED69120272.idx  alloc.h.5AD417D90CEE68AC.idx  alloc.h.9950756D786D0BFB.idx  alloc.h.B35F161F2D9C002E.idx  alloc.h.B9461714376A122E.idx  alloc.h.CB2949BA2256457E.idx  alloc.h.E9082D1444CAB7E2.idx  alloc.h.F1D5C23E13EA81DB.idx  annotated_commit.c.4BA8F73D4963A84B.idx  annotated_commit.h.7845415E036D0511.idx  annotated_commit.h.8A8C9E1AB29A3DFD.idx  api.c.94E957629BC20B93.idx  api.h.B44A95E8676F3340.idx  app.cpp.B14DD3ABB94B4EF0.idx  app.h.D1F4DAC06CE594FD.idx  apply.c.F285321907895366.idx  apply.h.E571EA191CDDCE92.idx  apply.h.FC6E9616A13A190E.idx  array.h.41FE6D003717E929.idx  array.h.50476DCA9A87526B.idx  array.h.5559F5B19006DDE2.idx  (+695 more)
